Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/staticImport/6537020/T6537020.out
T6537020.java:25:16: compiler.err.ref.ambiguous: s, kindname.variable, s, p.T6537020.A, kindname.variable, s, p.T6537020.B
1 error
